# vmd

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  default.nix.bak  flake.nix  shell.nix
auth/: Makefile
doc/: design.md
nixos-modules/: vmd-client.nix  vmd-keygen.nix  vmd-server.nix
server/: Cargo.toml
src/: kvm_simple_vm.rs  kvm_util.rs  main.rs
test/auth/: Makefile
test/mtls-client/: Cargo.toml
test/mtls-client/src/: main.rs
vmd-api/: README.md  openapi.yaml  rust-client.nix  rust-server.nix
vmd-api/api/: openapi.yaml
vmd-api/rust-client/: Cargo.toml  README.md
vmd-api/rust-client/.openapi-generator/: FILES
vmd-api/rust-client/docs/: ErrorModel.md  VirtualMachineBasicDetails.md  VirtualMachineCpu.md  VirtualMachineDevices.md  VirtualMachineHypervisorDetails.md  VirtualMachineInfo.md  VirtualMachineMemory.md  VirtualMachineOs.md  VirtualMachinePerformance.md  VmApi.md
vmd-api/rust-client/src/apis/: configuration.rs  mod.rs  vm_api.rs
vmd-api/rust-client/src/models/: error_model.rs  mod.rs  virtual_machine_basic_details.rs  virtual_machine_cpu.rs  virtual_machine_devices.rs  virtual_machine_hypervisor_details.rs  virtual_machine_info.rs  virtual_machine_memory.rs  virtual_machine_os.rs  virtual_machine_performance.rs
vmd-api/rust-server/: Cargo.toml  README.md
vmd-api/rust-server/.openapi-generator/: FILES
vmd-api/rust-server/api/: openapi.yaml
vmd-api/rust-server/docs/: ErrorModel.md  VirtualMachineBasicDetails.md  VirtualMachineCpu.md  VirtualMachineDevices.md  VirtualMachineHypervisorDetails.md  VirtualMachineInfo.md  VirtualMachineMemory.md  VirtualMachineOs.md  VirtualMachinePerformance.md  vm_api.md
vmd-api/rust-server/examples/client/: main.rs
vmd-api/rust-server/examples/server/: main.rs  server.rs
vmd-api/rust-server/src/: lib.rs  models.rs
vmd-api/rust-server/src/client/: mod.rs
vmd-api/rust-server/src/server/: mod.rs
vmd-client/: ButtonContentItem.qml  Cargo.toml  ColoredImage.qml  Constants.qml  DetailsView.qml  DialogPopup.qml  GeneralMenu.qml  InfoTileItem.qml  LoginView.qml  Makefile  ProgressBarM.qml  ProgressCircle.qml  README.md  SafetyIndicator.qml  ScreenBlur.qml  SecondaryViewHeader.qml  Separator.qml  TileItem.qml  TileItemDelegate.qml  TileMenu.qml  ToolButtonBackground.qml  ToolButtonContentItem.qml  datasource.cpp  datasource.h  default.nix  flake.nix  main.cpp  main.qml  pictures.qrc  qml.qrc  rootcontext.cpp  rootcontext.h  vmdatamodel.cpp  vmdatamodel.h  vmmanager.pro
vmd-client/src/: cli.rs  main.rs
vmd-common/: Cargo.toml
vmd-server/: Cargo.toml  Rocket.toml  default.nix
vmd-server/src/: api.rs  cli.rs  kvm_util.rs  main.rs  run.rs  server.rs  tls.rs  util.rs  vm_tools.rs
vmd-server/src/server/: api.rs  cli.rs  mod.rs  run.rs  tls.rs  util.rs
vmd-server/src/vmd/: kvm_util.rs  mod.rs
vmmanager/: ActionButton.qml  ButtonBackground.qml  GeneralSettingsView.qml  InfoTileItem.qml  main.qml  vmdatamodel.cpp  vmdatamodel.h
