[package]
name = "vmd-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmd-common = { path = "../vmd-common" }
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
thiserror = "1.0.38"
