[package]
name = "vmd-client"
version = "0.1.0"
edition = "2021"
authors = ["Julius Koskela <julius.koskela@unikie.com>"]

[dependencies]
vmd-rust-client-api = { path = "../vmd-api/rust-client" }
thiserror = "1.0.38"
hyper = { version = "0.14.25", features = ["http1", "full"] }
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.94"
clap = { version = "4.2.1", features = ["derive"] }
rustls = { version = "0.20.8", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
futures-util = "0.3.28"
mio = "0.8.6"
serde_derive = "1.0.159"
serde = { version = "1.0.159", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["rustls-tls"] }
tower-service = "0.3.2"
http = "0.2.9"
serde_yaml = "0.9.21"
