[package]
name = "vmd-server"
version = "0.1.0"
edition = "2021"
authors = ["Ville Ilvonen <ville.ilvonen@unikie.com>", "Julius Koskela <julius.koskela@unikie.com>"]

[dependencies]
kvm-ioctls = { version = "0.12.0" }
thiserror = "1.0.38"
openapiv3 = "1.0.2"
rocket = { version = "0.5.0-rc.2", features = ["tls", "mtls"] }
serde_yaml = "0.9.19"
