[package]
name = "vmd_server"
version = "0.1.0"
edition = "2021"
authors = ["Ville Ilvonen <ville.ilvonen@unikie.com>", "Julius Koskela <julius.koskela@unikie.com>"]

[dependencies]
vmd_rust_server_api = { path = "../vmd-api/rust-server" }
kvm-ioctls = { version = "0.12.0" }
thiserror = "1.0.38"
async-trait = "0.1.67"
futures = "0.3.27"
hyper = { version = "0.14.25", features = ["http1", "full"] }
log = "0.4.17"
swagger = "6.2.1"
tokio = { version = "1.26.0", features = ["full"] }
env_logger = "0.10.0"
serde_json = "1.0.94"
tokio-openssl = "0.6.3"
clap = { version = "4.2.1", features = ["derive"] }
rustls = { version = "0.20.8", features = ["dangerous_configuration"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
futures-util = "0.3.28"
mio = "0.8.6"
serde_derive = "1.0.159"
serde = { version = "1.0.159", features = ["derive"] }
