[package]
name = "vmd-rust-client-api"
version = "1.0.1"
authors = ["nikita.bazulin@unikie.com"]
description = "OpenAPI specification for virtual machine management on Ghaf platform"
license = "Apache License 2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
